Salesforce-Code-Git/src/objects/Developer_Project__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Work_Done__c</fullName>
        <label>Actual Work Done</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Builder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Builder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Developer_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JiraCode__c</fullName>
        <label>Developer</label>
        <referenceTo>Developer__c</referenceTo>
        <relationshipLabel>Developer Projects</relationshipLabel>
        <relationshipName>Developer_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Done__c</fullName>
        <label>Work Done</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>0%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>5% - 90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Developer Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project_Name__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>JiraCode__c</columns>
        <columns>Site__c</columns>
        <columns>Status__c</columns>
        <columns>Work_Done__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR-CODE-{0000}</displayFormat>
        <label>JIRA Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Developer Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>